Updated the header.

--- a/16899_lecture_09_mkoval_nthatte.tex
+++ b/16899_lecture_09_mkoval_nthatte.tex
@@ -67,12 +67,14 @@
 %{Scribe:YOUR\_NAME\_HERE \footnotemark}
 %{Lecture Topic}
 
-\lecture{Statistical Techniques in Robotics (16-899, S11)}
-{Lecture \#09, (Feb. 8, 2011)}
-{Lecturer: Stephane Ross}{Scribe: Jackie Libby}{Temporal Difference Methods}
+\lecture{Statistical Techniques in Robotics (16-899, S14)}%
+{Lecture \#09, (Feb. 11, 2014)}%
+{Lecturer: Drew Bagnell}%
+{Scribes: Michael Koval and Nitish Thatte}%
+{Q-Learning}
 
 % Be sure to acknowledge all previous scribes.
-%\footnotetext[1]{Some content adapted from previous scribs: Hyunggi Cho and Alberto Rodriguez}
+\footnotetext[1]{Some content adapted from previous scribs: Jackie Libby}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Document body: Scribe your notes here.
