Added work allocation to the outline.

--- a/16899_lecture_09_mkoval_nthatte.tex
+++ b/16899_lecture_09_mkoval_nthatte.tex
@@ -6,21 +6,21 @@
 \usepackage{epsfig}
 \usepackage[tight]{subfigure}
 
-% TD
+% TD (Nitish)
 %   online policy evaluation
-%   learning rate (intuition and bounds)
-% SARSA
+%   learning rate, intuition and bounds (Mike)
+% SARSA (Nitish)
 %   define the loss function
 %   derive the full gradient 
 %   drop the extra term
 %   explain that this is NOT gradient descent
 %   mention the Bellman-Residual method
-% Q-Learning
+% Q-Learning (Mike)
 %   online fitted Q-iteration
 %   restate the parameter update
 %   exploration policies: epsilon-greedy and Boltzman
-% Off-Policy vs On-Policy learning
-% Experience Replay
+% Off-Policy vs On-Policy learning (Mike)
+% Experience Replay (Mike)
 
 
 %extra packages added
